# routeupd

./: CHANGELOG.md  Cargo.toml  README.md  flake.nix
.github/workflows/: ci.yml  release.yml
src/: cli.rs  main.rs  notify.rs  parser.rs  periodic.rs  update.rs  url.rs
