[package]
name = "routeupd"
version = "0.1.0"
edition = "2021"

[dependencies]
rtnetlink = "0.12"
ipnet = "2.7"
url = "2.3"
capctl = "0.2"
parse_duration = "2.1"
argh = "0.1"
futures-util = "0.3"
anyhow = "1.0"

[dependencies.systemd]
version = "0.10"
default-features = false

[dependencies.reqwest]
version = "0.11"
features = [ "gzip" ]

[dependencies.tokio]
version = "1.23"
features = [ "time", "macros", "rt-multi-thread" ]

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 'z'
lto = true
strip = true
panic = "abort"
