[package]
name = "routeupd"
description = "Routing table updating tool"
version = "0.1.1"
edition = "2021"
authors = ["poscat <poscat@poscat.moe>"]

repository = "https://github.com/poscat0x04/routeupd"

readme = "README.md"
license = "BSD-3"

keywords = ["networking", "routing"]
categories = ["command-line-utilities"]

[dependencies]
rtnetlink = "0.13"
ipnet = "2.8"
url = "2.4"
capctl = "0.2"
argh = "0.1"
futures-util = "0.3"
anyhow = "1.0"

[dependencies.systemd]
version = "0.10"
default-features = false

[dependencies.reqwest]
version = "0.11"
features = [ "gzip" ]

[dependencies.tokio]
version = "1.32"
features = [ "time", "macros", "rt-multi-thread" ]

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 'z'
lto = true
strip = true
panic = "abort"
